# 98138_world

./: .gitignore  CLAUDE.md
.specify/memory/: constitution.md
cli/: .gitignore  README.md  pyproject.toml
cli/src/lego_image_processor/: __init__.py
cli/src/lego_image_processor/analysis/: __init__.py  color_stats.py
cli/src/lego_image_processor/cli/: __init__.py  layout.py  main.py  quantize.py  stats.py  validate.py
cli/src/lego_image_processor/core/: __init__.py  color_quantizer.py  image_loader.py  image_writer.py
cli/src/lego_image_processor/data/: lego_world_map_kit.json
cli/src/lego_image_processor/layout/: __init__.py  generator.py  grid.py  kit_spec.py  land_sea_mask.py  position.py  validator.py
cli/src/lego_image_processor/palette/: __init__.py  converter.py  lego_colors.json  loader.py
cli/tests/: __init__.py
cli/tests/contract/: test_layout_contract.py  test_validate_contract.py
cli/tests/fixtures/: .gitignore  lego_world_map_colormap.json  lego_world_map_land_sea_mask.json
cli/tests/fixtures/images/: DOWNLOAD_GUIDE.md  README.md  download_and_prepare.py
cli/tests/fixtures/layouts/: expected_test_128x80.csv  expected_test_128x80.json
cli/tests/integration/: test_cli.py  test_layout_pipeline.py  test_quantization_pipeline.py  test_validation_pipeline.py
cli/tests/unit/: test_color_quantizer.py  test_color_stats.py  test_converter.py  test_generator.py  test_grid.py  test_image_loader.py  test_image_writer.py  test_kit_spec.py  test_land_sea_mask.py  test_palette_loader.py  test_position.py  test_validator.py
(+18 files in other folders)
